force-app/main/default/objects/malive__MALiveAsyncError__c/malive__MALiveAsyncError__c.object-meta.xml
<CustomObject>
    <label>MA Live Async Error</label>
    <nameField>
        <displayFormat>MA_ERROR {000000}</displayFormat>
        <label>MA Live Async Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Async Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>