force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__ClassName__c.field-meta.xml
<CustomField>
    <fullName>malive__ClassName__c</fullName>
    <description>The name of the class and, optionally the method, that the error originated.</description>
    <inlineHelpText>The name of the class and, optionally the method, that the error originated.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>