force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__Completed__c.field-meta.xml
<CustomField>
    <fullName>malive__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>