force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__ErrorType__c.field-meta.xml
<CustomField>
    <fullName>malive__ErrorType__c</fullName>
    <description>The type of error received.</description>
    <inlineHelpText>The type of error received.</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>