force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__Message__c.field-meta.xml
<CustomField>
    <fullName>malive__Message__c</fullName>
    <description>The value of the message received.</description>
    <inlineHelpText>The value of the message received.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>