force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__ReportDate__c.field-meta.xml
<CustomField>
    <fullName>malive__ReportDate__c</fullName>
    <description>This date represents the specific Summary date MAIO was requested to return, not the date the request was run.</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>