force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__SobjectType__c.field-meta.xml
<CustomField>
    <fullName>malive__SobjectType__c</fullName>
    <label>Sobject Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>