force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__Subject__c.field-meta.xml
<CustomField>
    <fullName>malive__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>