force-app/main/default/objects/malive__MALiveAsyncError__c/fields/malive__SummaryConfig__c.field-meta.xml
<CustomField>
    <fullName>malive__SummaryConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the summary that had errors</description>
    <inlineHelpText>Reference to the summary that had errors</inlineHelpText>
    <label>Summary Config</label>
    <referenceTo>malive__MALiveDailySummaryConfig__c</referenceTo>
    <relationshipLabel>MA Live Async Errors</relationshipLabel>
    <relationshipName>MA_Live_Async_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>