force-app/main/default/objects/malive__MALiveAsyncError__c/listViews/malive__All_Errors.listView-meta.xml
<ListView>
    <fullName>malive__All_Errors</fullName>
    <columns>NAME</columns>
    <columns>malive__ClassName__c</columns>
    <columns>malive__Completed__c</columns>
    <columns>malive__DeviceId__c</columns>
    <columns>malive__ErrorType__c</columns>
    <columns>malive__LineNumber__c</columns>
    <columns>malive__Message__c</columns>
    <columns>malive__ObjectFieldValues__c</columns>
    <columns>malive__ObjectId__c</columns>
    <columns>malive__ReportDate__c</columns>
    <columns>malive__SobjectType__c</columns>
    <columns>malive__StackTrace__c</columns>
    <columns>malive__Subject__c</columns>
    <columns>malive__SummaryConfig__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Errors</label>
</ListView>